# developer-tools-research-agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
advanced-agent/: .env.example  README.md  main.py  pyproject.toml  research_alternate_to_placid_20250726_030113.md  test_improvements.py  test_precision.py
advanced-agent/src/: firecrawl.py  models.py  prompts.py  workflow.py
docs/: PROJECT_STRUCTURE.md
simple-agent/: main.py  pyproject.toml
